Fixed the Skills alignment issue in a crutch way

--- a/css/skills.css
+++ b/css/skills.css
@@ -23,22 +23,19 @@
 }
 
 .skills-carousel-wrapper {
+    width: 100%; /* Необходимо для обеспечивания расширения контейнера до максимальной ширины */
+    max-width: 720px;
     display: flex;
     flex-direction: row;
-    max-width: 720px;
     justify-content: space-between;
-    align-items: center;
-    align-self: stretch;
 }
 
 .skill-card-wrapper {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    align-self: stretch;
-    gap: 8px;
-    width: 102px;
 }
 
 .skill-card__image {
